<resources>
    <string name="app_name">HouseManager</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_name_hint">"Give name for your task</string>
    <string name="baby_name_hint">"Baby name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error_string">Name can not be empty</string>
    <string name="error_database">Task name have to be unique</string>
    <string name="title_activity_baby">BabyActivity</string>
    <string name="action_settings">Settings</string>
    <string name="choose_photo">Choose baby photo</string>
    <string name="choose_birth_date">Choose birth date</string>
    <string name="read_permission_denied">Photo can not be fetch without permission</string>
    <string name="empty_baby_name">Baby name can not be empty</string>
    <string name="not_unique_baby_name">Baby name has to be unique</string>
    <string name="birthday_not_set_warning">Please set birthday date</string>
    <string name="profile">Profile</string>
    <string name="actions">Actions</string>
    <string name="charts">Charts</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="pause">pause</string>
    <string name="eat">eats</string>
    <string name="wait">is waiting</string>
    <string name="title_activity_shop_list">ShopListActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="new_shop_list">Enter new list name</string>
    <string name="new_list_title">Add new list</string>
    <string name="edit_list">Edit list</string>
    <string name="bread">bread</string>
    <string name="bun">bun</string>
    <string name="muffin">muffin</string>
    <string name="baguette">baguette</string>
    <string name="tomato">tomato</string>
    <string name="potato">potato</string>
    <string name="cucumber">cucumber</string>
    <string name="onion">onion</string>
    <string name="garlic">garilic</string>
    <string name="pepper">pepper</string>
    <string name="apple">apple</string>
    <string name="banana">banana</string>
    <string name="strawberries">strawberries</string>
    <string name="ham">ham</string>
    <string name="chicken_fillets">chicken fillets</string>
    <string name="minced_meat">minced meat</string>
    <string name="pork_neck">pork neck</string>
    <string name="sausage">sausage</string>
    <string name="frankfurter">frankfurter</string>
    <string name="egg">egg</string>
    <string name="milk">milk</string>
    <string name="cheese">cheese</string>
    <string name="white_cheese">white cheese</string>
    <string name="beer">beer</string>
    <string name="vodka">vodka</string>
    <string name="whisky">whisky</string>
    <string name="beer_free">alcohol free beer</string>
    <string name="cookies">cookies</string>
    <string name="sweets">sweets</string>
    <string name="chocolate">chocolate</string>
    <string name="jelly">jelly</string>
    <string name="chips">chips</string>
    <string name="bread_sticks">breadsticks</string>
    <string name="peanuts">peanuts</string>
    <string name="crackers">crackers</string>
    <string name="tissue">tissue</string>
    <string name="wipes">wipes</string>
    <string name="diaper">diaper</string>
    <string name="toilet_paper">toilet_paper</string>
    <string name="soap">soap</string>
    <string name="shower_gel">shower gel</string>
    <string name="tooth_paste">tooth paste</string>
    <string name="shop_list">Lists</string>
    <string name="cyclic_task">Cyclic</string>
    <string name="one_shot_task">Single</string>
    <string name="shop_items">Products</string>
    <string name="shop_paths">Shops</string>
    <string name="add_product">Add product</string>
    <string name="bought_products">Show bought products </string>
    <string name="active_products">Show shop list </string>
    <string name="close">close</string>
    <string name="add_new_product">Add new product</string>
    <string name="new_product_name">Product name</string>
    <string name="water">water</string>
    <string name="bread_category">Bread</string>
    <string name="fruit_vegetables_category">Fruit and vegetables</string>
    <string name="meat_category">Meat</string>
    <string name="dairy_category">Dairy</string>
    <string name="alcohol_category">Alcohol</string>
    <string name="sweets_category">Sweets</string>
    <string name="snacks_category">Snacks</string>
    <string name="hygiene_category">Hygiene</string>
    <string name="drinkables_category">Drinkables</string>
    <string name="other_category">Other</string>
    <string name="can_preserves_category">Can and preserves</string>
    <string name="default_amount">Default amount</string>
    <string name="add_new_area">Add new shop area</string>
    <string name="add_new_area_hint">Area name</string>
    <string name="areas">Areas</string>
    <string name="shop_pat">Shop path</string>
    <string name="weight">Weight</string>
    <string name="volume">Volume</string>
    <string name="quantity">Quantity</string>
    <string name="shop_area">Shop area</string>
    <string name="all_categories">All</string>
    <string name="feed_event">%s eated %d min.</string>
    <string name="new_hometask_name">Task name</string>
    <string name="hometask_frequency">Task frequency</string>
    <string name="days">Days</string>
    <string name="weeks">Weeks</string>
    <string name="months">Months</string>
    <string name="years">Years</string>
    <string name="add_new_home_task_title">Add new task</string>
    <string name="delete_confirmation">Do you realy want to delete this task? All activities will be lost.</string>
    <string name="pending_tasks">%d tasks are waiting to be resolved</string>
    <string-array name="interval_array">
        <item>@string/days</item>
        <item>@string/weeks</item>
        <item>@string/months</item>
        <item>@string/years</item>
    </string-array>
    <string name="kids_category">Kids</string>
    <string name="home_category">Flat</string>
    <string name="new_home_category">New flat</string>
    <string name="car_category">Car</string>
    <string name="shop_category">Shop</string>
    <string name="phone_category">Phone</string>
    <string-array name="one_task_category">
        <item>@string/kids_category</item>
        <item>@string/home_category</item>
        <item>@string/new_home_category</item>
        <item>@string/car_category</item>
        <item>@string/shop_category</item>
        <item>@string/phone_category</item>
        <item>@string/other_category</item>
    </string-array>
    <string-array name="one_task_categor_with_all">
        <item>@string/all_categories</item>
        <item>@string/kids_category</item>
        <item>@string/home_category</item>
        <item>@string/new_home_category</item>
        <item>@string/car_category</item>
        <item>@string/shop_category</item>
        <item>@string/phone_category</item>
        <item>@string/other_category</item>
    </string-array>
    <string-array name="category_list">
        <item>@string/bread_category</item>
        <item>@string/fruit_vegetables_category</item>
        <item>@string/meat_category</item>
        <item>@string/dairy_category</item>
        <item>@string/can_preserves_category</item>
        <item>@string/alcohol_category</item>
        <item>@string/sweets_category</item>
        <item>@string/snacks_category</item>
        <item>@string/hygiene_category</item>
        <item>@string/drinkables_category</item>
        <item>@string/other_category</item>
    </string-array>
    <string-array name="category_list_with_all">
        <item>@string/all_categories</item>
        <item>@string/bread_category</item>
        <item>@string/fruit_vegetables_category</item>
        <item>@string/meat_category</item>
        <item>@string/dairy_category</item>
        <item>@string/can_preserves_category</item>
        <item>@string/alcohol_category</item>
        <item>@string/sweets_category</item>
        <item>@string/snacks_category</item>
        <item>@string/hygiene_category</item>
        <item>@string/drinkables_category</item>
        <item>@string/other_category</item>
    </string-array>
    <string-array name="measurment_list">
        <item>@string/quantity</item>
        <item>@string/weight</item>
        <item>@string/volume</item>
    </string-array>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>