<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="viewModel"
                type="com.synowkrz.housemanager.babyTask.babyCreator.BabyProfileCreatorViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="match_parent">
        <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp" tools:src="@tools:sample/avatars"
                android:id="@+id/babyPhoto"
                android:layout_marginTop="@dimen/standard_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/kid"
                android:contentDescription="@string/choose_photo"
                android:onClick="@{() -> viewModel.onBabyPhotoClicked()}"
        />

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/dateTextView"
                  android:text="@string/choose_birth_date"
                  app:layout_constraintTop_toBottomOf="@+id/babyPhoto"
                  android:layout_marginTop="@dimen/standard_margin"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  android:onClick="@{() -> viewModel.onDateClicked()}"
                  />

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/baby_name_hint"
                android:ems="10"
                android:id="@+id/babyName"
                app:layout_constraintTop_toBottomOf="@+id/dateTextView"
                android:layout_marginTop="@dimen/standard_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        <Button
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_cancel"
                app:layout_constraintTop_toBottomOf="@+id/babyName"
                android:layout_marginTop="@dimen/standard_margin"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/standard_margin"
                android:onClick="@{() -> viewModel.onCancelPressed()}"/>
        <Button
                android:text="@string/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_ok"
                app:layout_constraintTop_toBottomOf="@+id/babyName" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/standard_margin"
                android:layout_marginEnd="@dimen/standard_margin"
                android:onClick="@{() -> viewModel.onOKPressed()}"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>